--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <div>
         <h4>Contacto</h4>
-        <p>Email: jhonduran001@gmail.com</p>
+        <p>Email: empresapeticol@gmail.com</p>
         <p>Teléfono - WhatsApp: +57 322 407 79 12</p>
 
         <div class="social-icons">
